deployment/traefik.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      name: traefik
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v2.10
          args:
            - --api.insecure
            - --providers.kubernetescrd
            # - --configfile=/etc/traefik/traefik.yml # Specify the path to your config file
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
      #     volumeMounts:
      #       - name: traefik-config
      #         mountPath: /etc/traefik #
      # # volumes:
      #   - name: traefik-config
      #     configMap:
      #       name: traefik-config
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service

spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: dashboard
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
spec:
  type: LoadBalancer
  ports:
    - targetPort: web
      port: 80
  selector:
    app: traefik
